--- a/week-8.2/paytm/frontend/src/styles/imports/_components.imports.scss
+++ b/week-8.2/paytm/frontend/src/styles/imports/_components.imports.scss
@@ -1,1 +1,2 @@
-@import '../components/_signup.components'
+@import '../components/_dashboard.components';
+@import '../components/_signup.components';
